# expressive-capture

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  windows-installer.yml
contracts/: diagram-block-v1.md  document-bundle-v1.md
docs/: architecture.md  performance.md  platform-support.md  threat-model.md  windows-smoke-test.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/bridge/: native.ts
src/capture/: draft.ts  markdown.ts  paste.ts  types.ts
src/diagram/: diagramBlock.ts  excalidrawAdapter.tsx  index.ts  preview.ts  svgPreview.ts  trigger.ts  types.ts
src/editor/: MarkdownEditor.tsx  diagramTrigger.ts  imagePaste.ts  semanticMarkdown.ts
tests/: capture-draft.test.ts  capture-paste.test.ts  capture-recovery.test.ts  diagram-block.test.ts  diagram-svg-preview.test.ts  editor-diagram-trigger.test.ts  editor-image-paste.test.ts  editor-semantic-markdown.test.ts
tests/fixtures/diagram-v1/: basic.md  invalid-path.md
